--- a/src/rest/views/home.html
+++ b/src/rest/views/home.html
@@ -27,6 +27,10 @@
 
 </div>
 
+<div class="resDiv" style="display: none" id="noMatchedFlight">
+    <span class="failText">No flight matches your search.</span>
+</div>
+
 <!--QUERY RESULT-->
 <div class="resDiv" id="resDiv">
     <table class="table table-hover" id="flightSearchTable"></table>
