--- a/src/rest/views/home.html
+++ b/src/rest/views/home.html
@@ -49,6 +49,8 @@
 
 <!-- RESERVATION SUMMARY -->
 <div class="jumbotron" style="display: none" id="reservationSummary">
+    <h4>Reservation Summary</h4>
+    <hr>
     <table class="table table-hover" id="reservationSummaryTable">
         <tr>
             <th>Flight Number</th>
