added Clear button on check schedule and fixed error

--- a/src/rest/views/schedule.html
+++ b/src/rest/views/schedule.html
@@ -32,7 +32,7 @@
 
     <!-- view other crews -->
     <div class = "jumbotron" id="employeeSchedule">
-        <div><label><b>Check All Flight Schedule</b></label></div>
+        <div><label><b>Check All Flight Crew Schedule</b></label></div>
         <div class="searchFlexBar">
             <div class="searchBox">
             <input type="date" placeholder="Enter Date" id="dateSchedule" required>
@@ -40,6 +40,7 @@
         </div>
 
         <button type="button" class="btn btn-primary" id="check-all-schedule">Search</button>
+        <button type="button" class="btn btn-primary" id="clear-all-schedule">Clear</button>
     </div>
 
     <div class="resDiv" id="allSchedule">
