--- a/src/rest/views/reservation.html
+++ b/src/rest/views/reservation.html
@@ -1,9 +1,12 @@
 
 <div class = "jumbotron" id="reservationSearch">
 
-    <h4>My Reservations</h4>
-    <hr>
-<div class="resDiv" id="resDiv">
+    <!--<h4>My Reservations</h4>-->
+    <!--<hr>-->
+
+    <button type = "button" class = "btn btn-success" id ="myRes"> My Reservations </button>
+
+<div class="seatDiv" id="seatDiv">
     <table class="table table-hover" id="seatTable"></table>
     <button type="button" class = "btn btn-success" id="totalCost">Total Cost : Click to Update</button>
     <p id="demo"></p>
@@ -13,76 +16,81 @@
 
 <script >
 
-    var session = window.sessionStorage,
-        isPassenger = window.sessionStorage.getItem('usertype') === "passenger",
-        isLoggedIn = JSON.parse(session.getItem('isLoggedIn'));
-    if (!isLoggedIn || !isPassenger) window.location.href = './';
 
+//        var session = window.sessionStorage;
+//        var email = session.getItem('email');
+////            isPassenger = window.sessionStorage.getItem('usertype') === "passenger",
+////            isLoggedIn = JSON.parse(session.getItem('isLoggedIn'));
+////        if (!isLoggedIn || !isPassenger) window.location.href = './';
+//        hey()
+//        $(document).on("click", "#myRes", function(){
+//
+//            clearResult();
+//            var sql = getReservation(email);
+//            postQuerySync({query: sql}, reservationHandler);
+//        });
+////        var sql = getReservation(email);
+////        postQuerySync({query: sql}, reservationHandler);
+//
+//        $(document).on("click", "#totalCost", function () {
+//            var cost_sql = passengerCheckTotalCost(email);
+//            postQuerySync({query: cost_sql}, totalCostHandler);
+//        });
+//
+//
+//        $(document).on("click", ".reserve-buttons", function () {
+//
+//
+//            var id = $(this).attr('id');
+//
+//            var flightNum = document.getElementById('seatTable').rows[id].cells[2].innerHTML;
+//            var oldConfNum = document.getElementById('seatTable').rows[id].cells[1].innerHTML;
+//            var oldSeatNum = document.getElementById('seatTable').rows[id].cells[3].innerHTML;
+//
+//
+//            session.setItem('oldConfNum', oldConfNum);
+//            session.setItem('flightNum', flightNum);
+//            session.setItem('oldSeatNum', oldSeatNum);
+//
+//            var oldSeatPrice_sql = getOldSeatPrice(oldSeatNum);
+//            postQuerySync({query: oldSeatPrice_sql}, null);
+//
+//            clearResult();
+//            var seats_sql = viewAvailableSeats(flightNum);
+//            postQuery({query: seats_sql}, changeSeatHandler);
+//
+//        });
+//
+//        $(document).on("click", '#cancelSwitch', function () {
+//
+//            session.removeItem('oldConfNum');
+//            session.removeItem('flightNum');
+//            session.removeItem('oldSeatNum');
+//            clearResult();
+//            var drop = dropOldSeatPriceView();
+//            postQuerySync({query: drop}, null);
+////            var sql2 = getReservation(email);
+////            postQuerySync({query: sql2}, reservationHandler);
+//
+//        });
+//
+//        $(document).on("click", '#switchSeat', function () {
+//
+//            var ConfNum = session.getItem('oldConfNum');
+//            var FlightNum = session.getItem('flightNum');
+//
+//            select(ConfNum, FlightNum);
+//
+//            session.removeItem('oldConfNum');
+//            session.removeItem('flightNum');
+//            session.removeItem('oldSeatNum');
+//
+//            var drop = dropOldSeatPriceView();
+//            postQuerySync({query: drop}, null);
+////            var sql2 = getReservation(email);
+////            postQuerySync({query: sql2}, reservationHandler);
+//
+//        });
 
-    var email = session.getItem('email');
-
-    var sql = getReservation(email);
-    postQuerySync({query: sql}, reservationHandler);
-
-    $(document).on("click", "#totalCost", function () {
-        var cost_sql = passengerCheckTotalCost(email);
-        postQuery({query: cost_sql}, totalCostHandler);
-    });
-
-
-    $(document).on("click", ".reserve-buttons", function () {
-
-
-
-        var id = $(this).attr('id');
-
-        var flightNum = document.getElementById('seatTable').rows[id].cells[2].innerHTML;
-        var oldConfNum = document.getElementById('seatTable').rows[id].cells[1].innerHTML;
-        var oldSeatNum = document.getElementById('seatTable').rows[id].cells[3].innerHTML;
-
-
-        session.setItem('oldConfNum', oldConfNum);
-        session.setItem('flightNum', flightNum);
-        session.setItem('oldSeatNum', oldSeatNum);
-
-        var oldSeatPrice_sql = getOldSeatPrice(oldSeatNum);
-        postQuerySync({query: oldSeatPrice_sql}, null);
-
-        var seats_sql = viewAvailableSeats(flightNum);
-        clearResult();
-        postQuery({query: seats_sql}, changeSeatHandler);
-
-    });
-
-    $(document).on("click", '#cancelSwitch', function () {
-
-        session.removeItem('oldConfNum');
-        session.removeItem('flightNum');
-        session.removeItem('oldSeatNum');
-        clearResult();
-        var drop = dropOldSeatPriceView();
-        postQuerySync({query: drop},null);
-        var sql2 = getReservation(email);
-        postQuerySync({query: sql2}, reservationHandler);
-
-    });
-
-    $(document).on("click", '#switchSeat', function () {
-
-        var ConfNum = session.getItem('oldConfNum');
-        var FlightNum = session.getItem('flightNum');
-
-        select(ConfNum, FlightNum);
-
-        session.removeItem('oldConfNum');
-        session.removeItem('flightNum');
-        session.removeItem('oldSeatNum');
-
-        var drop = dropOldSeatPriceView();
-        postQuerySync({query: drop}, null);
-        var sql2 = getReservation(email);
-        postQuerySync({query: sql2}, reservationHandler);
-
-    });
 
 </script>
