fixed displaying error in update profile

--- a/src/rest/views/employee.html
+++ b/src/rest/views/employee.html
@@ -1,8 +1,8 @@
-<div class="container">
-    <div class="jumbotron">
+
+<div class="jumbotron">
         <h1> View Employees </h1>
     </div>
-</div>
+
 
 <div class="jumbotron" id="Schedule">
 
@@ -28,6 +28,7 @@
 
 
 <script>
+    console.log("view shceudle")
     var isLoggedIn = JSON.parse(window.sessionStorage.getItem('isLoggedIn')),
         isEmployee = window.sessionStorage.getItem('usertype') === "pilot" ||
             window.sessionStorage.getItem('usertype') === "flightAttendant" ||
