--- a/src/rest/views/reservation.html
+++ b/src/rest/views/reservation.html
@@ -13,7 +13,7 @@
 
 <script>
 
-
+    console.log("res")
     var session = window.sessionStorage,
         isPassenger = window.sessionStorage.getItem('usertype') === "passenger",
         isLoggedIn = JSON.parse(session.getItem('isLoggedIn'));
