--- a/src/rest/views/profile.html
+++ b/src/rest/views/profile.html
@@ -1,5 +1,5 @@
 <form action="/" method="POST" id="updateForm">
-    <div class="container">
+    <div class="jumbotron">
 
         <label><b>Email: </b></label> <br>
         <text id="email"></text>
@@ -17,13 +17,6 @@
         <label><b>Repeat Password</b></label>
         <input type="password" placeholder="Repeat Password" name="psw-repeat">
 
-        <!--<label><b>First Name</b></label>-->
-        <!--<input type="text" placeholder="Enter First Name" name="fname" pattern="[a-zA-Z]+(\s[a-zA-Z]+)*">-->
-
-        <!--<label><b>Last Name</b></label>-->
-        <!--<input type="text" placeholder="Enter Last Name" name="lname" pattern="[a-zA-Z]+">-->
-
-
         <label><b>Address: </b></label>
         <br><text id="addr"></text>
         <input type="text" placeholder="Enter New Address" name="address">
@@ -38,7 +31,9 @@
 </form>
 
 </body>
+
 <script>
+    console.log("inside")
     var email = window.sessionStorage.getItem("email");
     var usertype= window.sessionStorage.getItem('usertype');
 
@@ -47,7 +42,7 @@
         var sql = "select * from passenger where email = " + JSON.stringify(email);
     else
         var sql = "select * from employee where email = " +JSON.stringify(email);
-    postQuery({query: sql}, fillInProfile);
+    postQuerySync({query: sql}, fillInProfile);
 
     function fillInProfile(data) {
         var info = data.body.result[0];
