all done with clerk tasks

--- a/src/rest/views/flight_detail.html
+++ b/src/rest/views/flight_detail.html
@@ -66,12 +66,12 @@
 <br><br>
 <label><h4><b>Assigned Pilot(s)</b></h4></label><br>
 <table class="table table-hover" id="pilotTable"></table>
-<button type="button" onclick="assignPilot()">Assign Pilot</button>
+<button type="button" onclick="viewAvailablePilot()">Assign Pilot</button>
 <table class="table table-hover" id="availablePilot" style="display: none"></table>
 <br><br>
 <label><h4><b>Assigned Flight Attendant(s)</b></h4></label><br>
 <table class="table table-hover" id="faTable"></table>
-<button type="button" onclick="assignAttendant()">Assign Flight Attendant</button>
+<button type="button" onclick="viewAvailableAttendant()">Assign Flight Attendant</button>
 <table class="table table-hover" id="availableAttendant" style="display: none"></table>
 <br><br>
 <label><h4><b>Passenger(s)</b></h4></label><br>
