--- a/src/rest/views/employee.html
+++ b/src/rest/views/employee.html
@@ -8,7 +8,7 @@
 
     <div class="searchFlexBar">
         <div class="searchBox">
-            <div><input type="radio" name = "usertype" id="pilot" value = "Pilot" />   <label>Pilot </label></div>
+            <div><input type="radio" name = "usertype" id="pilot" value = "Pilot" checked="checked"/>   <label>Pilot </label></div>
             <div> <input type="radio" name = "usertype" id="flightAttendant" value = "FlightAttendant" />   <label>Flight Attendant</label></div>
             <div> <input type="radio" name = "usertype" id="all" value = "All" />  <label>All</label> </div>
         </div>
