--- a/src/rest/public/stylesheets/signup.css
+++ b/src/rest/public/stylesheets/signup.css
@@ -9,7 +9,7 @@ input[type=text], input[type=password] {
 }
 
 /* Set a style for all buttons */
-button {
+#signupForm button {
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
