--- a/src/rest/views/home.html
+++ b/src/rest/views/home.html
@@ -22,8 +22,8 @@
         <input type="date" id="dptDate" required>
     </div>
 
-    <button type="button" class="btn btn-primary" id="submitQuery">Search</button>
-    <button type="button" class="btn btn-primary" id="clearTable">Clear</button>
+    <button type="button" class="btn btn-primary btn-lg" id="submitQuery">Search</button>
+    <button type="button" class="btn btn-primary btn-lg" id="clearTable">Clear</button>
 
 </div>
 
