--- a/src/rest/views/profile.html
+++ b/src/rest/views/profile.html
@@ -22,8 +22,8 @@
         <input type="text" placeholder="Enter New Address" name="address">
 
         <div class="clearfix">
-            <button type="button" class="cancelbtn">Cancel</button>
-            <button type="submit" class="updatebtn">Update</button>
+            <button type="button" class="btn btn-danger">Cancel</button>
+            <button type="submit" class="btn btn-primary">Update</button>
         </div>
         <span class="failText"><p class="updateMsg" id="updateMsg"></p></span>
 
