--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -43,6 +43,8 @@
                                 onclick="loadBlockContent('./reservation')">My Reservations</a></li>
                         <li class="pilot-attendant-menu" id="check-schedule"><a
                                 onclick="loadBlockContent('./schedule')">My Schedules</a></li>
+                        <li class="employee-menu" id="check-schedule"><a
+                                onclick="loadBlockContent('./schedule')">Crew Schedules</a></li>
                         <li class="clerk-menu" id="check-flights"><a onclick="loadBlockContent('./flights')">Search
                             Flights</a></li>
                         <li class="employee-menu" id="check-employee"><a onclick="loadBlockContent('./employee')">View
