--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="../public/stylesheets/style.css">
     <link rel="stylesheet" href="../public/stylesheets/index.css">
     <link rel="stylesheet" href="../public/stylesheets/login.css">
-    <link rel="stylesheet" href="../public/stylesheets/signup.css">
 </head>
 
 <body>
@@ -43,7 +42,7 @@
                                 onclick="loadBlockContent('./reservation')">My Reservations</a></li>
                         <li class="pilot-attendant-menu" id="check-schedule"><a
                                 onclick="loadBlockContent('./schedule')">My Schedules</a></li>
-                        <li class="employee-menu" id="check-schedule"><a
+                        <li class="clerk-menu" id="crew-schedule"><a
                                 onclick="loadBlockContent('./schedule')">Crew Schedules</a></li>
                         <li class="clerk-menu" id="check-flights"><a onclick="loadBlockContent('./flights')">Search
                             Flights</a></li>
