--- a/src/rest/views/schedule.html
+++ b/src/rest/views/schedule.html
@@ -6,12 +6,13 @@
 
     <div class="searchFlexBar">
         <div class="searchBox">
-            <label><b>City (optional)</b></label>
-            <input type="text" placeholder="Enter City" id="dptCity" required>
+            <label><b>City</b></label>
+            <input type="date" placeholder="Enter City (optional)" id="dptCity" required>
         </div>
+
         <div class="searchBox">
-            <label><b>Date (optional)</b></label><br>
-            <input type="date" id="dptDate" required>
+            <label><b>Date </b></label><br>
+            <input type="date" placeholder="Enter Date (optional)" id="dptDate" required>
         </div>
     </div>
 
