--- a/src/rest/views/index.html
+++ b/src/rest/views/index.html
@@ -36,7 +36,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">Dropdown <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li class="passenger-menu" id="updateProfile"><a onclick="loadBlockContent('./profile')">Update
+                        <li class="common-menu" id="updateProfile"><a onclick="loadBlockContent('./profile')">Update
                             Profile</a></li>
                         <li class="passenger-menu" id="check-reservation"><a
                                 onclick="loadBlockContent('./reservation')">My Reservations</a></li>
