--- a/src/rest/views/signup.html
+++ b/src/rest/views/signup.html
@@ -21,8 +21,8 @@
         <input type="text" placeholder="Enter Phone Number (ex. 1234567890)" name="phone" required pattern="\d\d\d\d\d\d\d\d\d\d">
 
         <div class="clearfix">
-            <button type="button" class="cancelbtn">Cancel</button>
-            <button type="submit" class="signupbtn">Sign Up</button>
+            <button type="button" class="btn btn-danger" onclick="$('.container').load('./home')">Cancel</button>
+            <button type="submit" class="btn btn-primary">Sign Up</button>
         </div>
     </div>
 </form>
