--- a/src/rest/views/flight_detail.html
+++ b/src/rest/views/flight_detail.html
@@ -40,7 +40,7 @@
             <td>
                 <select id="terminalSelector">
                     <option value="main">Main</option>
-                    <option value="north">Nouth</option>
+                    <option value="north">North</option>
                     <option value="south">South</option>
                     <option value="west">West</option>
                     <option value="east">East</option>
