--- a/src/rest/public/stylesheets/style.css
+++ b/src/rest/public/stylesheets/style.css
@@ -15,7 +15,17 @@ input[type=text], input[type=password] {
     box-sizing: border-box;
 }
 
-/*!* Set a style for all buttons *!*/
+/* Set a style for all buttons */
+#reservationSummary button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
 /*#signupForm, #reservationSummary button {*/
     /*background-color: #4CAF50;*/
     /*color: white;*/
